fix: gap and padding-bottom in .about

--- a/shelter/media.css
+++ b/shelter/media.css
@@ -74,10 +74,10 @@
 	
 	.about {
 		padding-top: 50px;
-		padding-bottom: 100px;
+		padding-bottom: 99px;
 		flex-direction: column-reverse;
 		align-items: center;
-		gap: 65;
+		gap: 55px;
 	}
 
 	.fr-container { gap: 10px; }
